# c-family-practice

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  justfile
src/: main.c  main.cpp
src/c/: .clang-format  .clang-tidy  .clangd  main.c
src/c/lib/: arena.c  arena.h  error.c  error.h  heaparray.c  heaparray.h  input.c  input.h  intarray.c  intarray.h  maybe.c  maybe.h  str.c  str.h
src/cpp/: .clang-format  .clang-tidy  main.cpp
